/*
 * $Id: ChangeLog,v 1.3488 2004/10/04 15:47:59 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-10-05 01:50 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Save and restore application's _SET_TYPEAHEAD state in the debugger.

2004-10-04 08:46 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbver.h
  * bin/pack_bin.bat
  * bin/pack_src.bat
  * xharbour/xharbour.spec
    * Refreshed for 0.99.2

2004-10-04 08:41 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/rtl/at.c
    ! Corrected handling of 3rd and 4th arguments to support negative values.
  + tests/testat.prg
    + Test cases for At() function.

2004-10-03 03:55 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * fixed the logic for choosing the directory for index file to be
      Clipper compatible.

2004-10-01 05:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
    ! Enable 'cross function aliasing' when building pp.lib

2004-10-01 03:55 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapicdp.h
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * added #define hb_cdp_page s_cdpage

  * xharbour/source/rdd/dbcmd.c
    * fixed problem with append from. The file is open now in
      SHARED/READONLY mode

2004-09-30 08:20 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * contrib/rdd_ads/ads1.c
    * fixed dbInfo (DBI_GETLOCKARRAY)
    * added eof test before APPEND to clear an unusual problem
      with child tables seeming to be at eof immediately after append.

2004-09-30 16:23 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    * Copied recent fix from STATE_EXPRES_ID to STATE_ID

  /*
     We have very ugly and inefficent redundancy in getExpReal().